# prisma

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  makefile
src/: CMakeLists.txt  editor.cpp  editor.h  editorproject.cpp  editorproject.h  macros.cpp  main.cpp  main.h  renderitem.cpp  renderitem.h  settings.cpp  settings.h  theme.cpp  theme.h
